continue profile page

--- a/public/integtest.html
+++ b/public/integtest.html
@@ -184,7 +184,7 @@
             <div class="top-bar">
                 <div class="top-bar-left">
                     <h4>Dashboard / Gallery</h4>
-                    <h2>Upload Photos</h2>
+                    <h2>Welcome Back</h2>
                 </div>
                 <nav>
                     <button id="logoutBtn" class="danger-btn">
