new updates (gallery) + payment(tbc)

--- a/public/index.html
+++ b/public/index.html
@@ -570,7 +570,7 @@ document.addEventListener("DOMContentLoaded", () => {
     if (token) {
     // User is logged in
     accountNav.innerHTML = `
-      <a href="user/user_gallery.html"><i class="fa-solid fa-user"></i> Profile</a>
+      <a href="userprofile.html"><i class="fa-solid fa-user"></i> Profile</a>
       <a href="#" id="logout-btn" style="margin-left:10px; color:#ff4d4d;">Logout</a>
     `;
 
