bookingss done, continue view state full unlock

--- a/public/package.html
+++ b/public/package.html
@@ -247,7 +247,9 @@
             <p><span class="checksym">✓</span> Free souvenir e-card download</p>
         </div>
 
-        <a href="#" class="btn">Book Now</a>
+        <button onclick="openBookingModal('Suba Sand Dunes', 2500)" class="btn" style="cursor: pointer;">
+          Book Now
+        </button>
         </div>
 
         <div class="card">
@@ -265,7 +267,9 @@
             <p><span class="checksym">✓</span> Complimentary souvenir print </p>
         </div>
 
-        <a href="#" class="btn">Book Now</a>
+        <button onclick="openBookingModal('Suba Sand Dunes', 2500)" class="btn" style="cursor: pointer;">
+          Book Now
+        </button>
         </div>
 
       </div>
@@ -328,8 +332,9 @@
     <div class="cta-container">
       <h3>Ready for your next  adventure?</h3>
       <p>Start your adventure today! Capture every moment and take home memories that last a lifetime.</p>
-      <a href="bookings.html" class="btn">Book Now</a>
-        </div>
+        <button onclick="openBookingModal('Suba Sand Dunes', 2500)" class="btn" style="cursor: pointer;">
+          Book Now
+        </button>
     </div>
   </section>
 
@@ -396,7 +401,6 @@
 
   <p class="more-faq">Need more answers? <a href="#">View full FAQ →</a></p>
 </section>
-
 
    <!-- ===== FOOTER SECTION ===== -->
   <footer>
