--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <div class="nav-container">
       <div class="logo">
         <!-- Replace this with your actual logo image -->
-        <img src="logos/logo3.png" alt="Profilepic Multimedia Logo" />
+        <img src="/public/materials/logos/logo3.png" alt="Profilepic Multimedia Logo" />
       </div>
 
       <nav class="nav-links">
@@ -95,11 +95,11 @@
 
     <div class="right">
       <div class="left-imagec">
-        <img src="images/image_compilation/mayon_skydrive/551044741_1712295650199785_2102384084869636190_n.jpg" alt="Intro Image">
+        <img src="/public/materials/image_compilation/mayon_skydrive/551044741_1712295650199785_2102384084869636190_n.jpg" alt="Intro Image">
       </div>
       <div class="right-imagec">
-        <img src="images/image_compilation/chocolate_hills/560283456_1723866295709387_7447751600601642820_n.jpg" alt="Intro Image" class="top-img">
-        <img src="images/image_compilation/sumlang_lake/550446532_1712315000197850_1866374290184121956_n.jpg" alt="Intro Image" class="bottom-img">
+         <img src="/public/materials/image_compilation/chocolate_hills/560283456_1723866295709387_7447751600601642820_n.jpg" alt="Intro Image">
+         <img src="/public/materials/image_compilation/sumlang_lake/550446532_1712315000197850_1866374290184121956_n.jpg" alt="Intro Image">
       </div>
     </div>
   </div>
