--- a/public/login.html
+++ b/public/login.html
@@ -299,7 +299,7 @@ body {
                 
                 // Redirect based on role (Initial simple routing)
                 if (data.user.role === 'admin' || data.user.role === 'staff') {
-                    window.location.href = '/dashboard.html'; // Admin/Staff Dashboard
+                    window.location.href = '/integtest.html'; // Admin/Staff Dashboard
                 } else {
                     window.location.href = '/index.html'; // Regular Customer Profile
                 }
